# rossby-vis

./: .gitignore  AGENT.md  Cargo.toml  README.md  logging-example.env
.github/workflows/: ci.yml
doc/: design.md  logging.md  plan.md  ui-design.en.md  ui-design.zh.md  ui-refactor.md  ui.md
public/: index.html
public/data/oscar/: 20140131-surface-currents-oscar-0.33.excerpt.json
public/data/weather/current/: current-wind-surface-level-gfs-1.0.excerpt.json
public/jp/: index.html
public/libs/earth/1.0.0/: earth.js  metadata-ui.js  micro.js  products.js
public/styles/: styles.css
public/test/: test-rossby.html
src/: embed.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  middleware.rs  server.rs
tests/: integration_tests.rs  logging_tests.rs  metadata_ui_tests.rs  proxy_tests.rs  server_tests.rs
